--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "synthetic": "tsx scripts/generate-synthetic-patients.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.990.0",
@@ -17,8 +18,10 @@
     "@prisma/client": "^6.19.2",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jose": "^6.1.3",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "pdf-parse": "^2.4.5",
@@ -36,6 +39,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
