fix(deploy): PDF scan in Docker — copy pdf-parse/pdfjs-dist, raise body limit
- Copy pdf-parse and pdfjs-dist into runner stage (serverExternalPackages not in standalone)
- Set serverActions.bodySizeLimit to 10mb in next.config for extract-pdf uploads

--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -41,6 +41,10 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 COPY --from=builder --chown=nextjs:nodejs /app/node_modules/.prisma ./node_modules/.prisma
 COPY --from=builder --chown=nextjs:nodejs /app/node_modules/@prisma ./node_modules/@prisma
 
+# PDF extraction (serverExternalPackages; not in standalone trace)
+COPY --from=builder --chown=nextjs:nodejs /app/node_modules/pdf-parse ./node_modules/pdf-parse
+COPY --from=builder --chown=nextjs:nodejs /app/node_modules/pdfjs-dist ./node_modules/pdfjs-dist
+
 USER nextjs
 
 EXPOSE 3000
